# build-top-repos

./: .bazelrc  .gitignore  MODULE.bazel  README.md  top1000repos-strict.csv
automation/: add_next_project.py  priority.txt  prompt.md  run.sh  state.json  tail.sh
harness/: BUILD.bazel  assemble_toolchain.sh  build_artifact.sh  defs.bzl  gen_config.py  smoke_in_container.sh  test_in_container.sh
projects/3x-ui/: BUILD.bazel  smoke.sh
projects/astrbot/: BUILD.bazel  smoke.sh
projects/astro/: BUILD.bazel  smoke.sh
projects/autogen/: BUILD.bazel  smoke.sh
projects/babel/: BUILD.bazel  smoke.sh
projects/bevy/: BUILD.bazel  smoke.sh
projects/bitcoin/: BUILD.bazel  smoke.sh
projects/black/: BUILD.bazel  smoke.sh
projects/browser-use/: BUILD.bazel  smoke.sh
projects/btop/: BUILD.bazel  smoke.sh
projects/codewhale/: BUILD.bazel  smoke.sh
projects/continue/: BUILD.bazel  smoke.sh
projects/cpython/: BUILD.bazel  smoke.sh
projects/deno/: BUILD.bazel  smoke.sh
projects/dioxus/: BUILD.bazel  smoke.sh
projects/dive/: BUILD.bazel  smoke.sh
projects/dokku/: BUILD.bazel  smoke.sh
projects/duckdb/: BUILD.bazel  smoke.sh
projects/ecc/: BUILD.bazel  smoke.sh
projects/echo/: BUILD.bazel  smoke.sh
projects/esbuild/: BUILD.bazel  smoke.sh
projects/fish/: BUILD.bazel  smoke.sh
projects/freqtrade/: BUILD.bazel  smoke.sh
projects/fzf/: BUILD.bazel  smoke.sh
projects/gemini-cli/: BUILD.bazel  smoke.sh
projects/gh-cli/: BUILD.bazel  smoke.sh
projects/gin/: BUILD.bazel  smoke.sh
projects/gitnexus/: BUILD.bazel  smoke.sh
projects/glances/: BUILD.bazel  smoke.sh
projects/goose/: BUILD.bazel  smoke.sh
projects/gpt4free/: BUILD.bazel  smoke.sh
projects/gulp/: BUILD.bazel  smoke.sh
projects/helix/: BUILD.bazel  smoke.sh
projects/hexo/: BUILD.bazel  smoke.sh
projects/hoppscotch/: BUILD.bazel  smoke.sh
projects/httpie/: BUILD.bazel  smoke.sh
projects/husky/: BUILD.bazel  smoke.sh
projects/immich/: BUILD.bazel  smoke.sh
projects/jq/: BUILD.bazel  smoke.sh
projects/json/: BUILD.bazel  smoke.sh
projects/langflow/: BUILD.bazel  smoke.sh
projects/llama-cpp/: BUILD.bazel  smoke.sh
projects/llama-index/: BUILD.bazel  smoke.sh
projects/manim/: BUILD.bazel  smoke.sh
projects/mempalace/: BUILD.bazel  smoke.sh
projects/meteor/: BUILD.bazel  smoke.sh
projects/mole/: BUILD.bazel  smoke.sh
projects/new-api/: BUILD.bazel  smoke.sh
projects/numpy/: BUILD.bazel  smoke.sh
projects/one-api/: BUILD.bazel  smoke.sh
projects/parcel/: BUILD.bazel  smoke.sh
projects/php-src/: BUILD.bazel  smoke.sh
projects/podman/: BUILD.bazel  smoke.sh
projects/polars/: BUILD.bazel  smoke.sh
projects/prisma/: BUILD.bazel  smoke.sh
projects/pyenv/: BUILD.bazel  smoke.sh
projects/qdrant/: BUILD.bazel  smoke.sh
projects/qlib/: BUILD.bazel  smoke.sh
projects/raylib/: BUILD.bazel  smoke.sh
projects/redis/: BUILD.bazel  smoke.sh
projects/rich/: BUILD.bazel  smoke.sh
projects/rtk/: BUILD.bazel  smoke.sh
projects/ruff/: BUILD.bazel  smoke.sh
projects/ruflo/: BUILD.bazel  smoke.sh
projects/rustlings/: BUILD.bazel  smoke.sh
projects/ruview/: BUILD.bazel  smoke.sh
projects/scrapy/: BUILD.bazel  smoke.sh
projects/sherlock/: BUILD.bazel  smoke.sh
projects/sing-box/: BUILD.bazel  smoke.sh
projects/spacy/: BUILD.bazel  smoke.sh
projects/starship/: BUILD.bazel  smoke.sh
projects/syncthing/: BUILD.bazel  smoke.sh
projects/textual/: BUILD.bazel  smoke.sh
projects/thefuck/: BUILD.bazel  smoke.sh
projects/tidb/: BUILD.bazel  smoke.sh
projects/tinygrad/: BUILD.bazel  smoke.sh
projects/tooljet/: BUILD.bazel  smoke.sh
projects/trilium/: BUILD.bazel  smoke.sh
projects/ultralytics/: BUILD.bazel  smoke.sh
projects/unsloth/: BUILD.bazel  smoke.sh
projects/uptime-kuma/: BUILD.bazel  smoke.sh
projects/uv/: BUILD.bazel  smoke.sh
projects/v2ray-core/: BUILD.bazel  smoke.sh
projects/webpack/: BUILD.bazel  smoke.sh
projects/whisper-cpp/: BUILD.bazel  smoke.sh
projects/xray-core/: BUILD.bazel  smoke.sh
projects/xx-net/: BUILD.bazel  smoke.sh
projects/yt-dlp/: BUILD.bazel  smoke.sh
projects/zellij/: BUILD.bazel  smoke.sh
projects/zx/: BUILD.bazel  smoke.sh
toolchains/: BUILD.bazel
