package(default_visibility = ["//visibility:public"])

# Cached toolchain rootfs: ubuntu-base + CA + an apt package set baked in via one
# apt pass against the pinned snapshot (+ optional Node tarball). Bazel caches
# each keyed on its inputs + package list, so apt runs once per toolchain.
#
# Runs locally with network: it invokes crun (user namespaces) and apt, which
# Bazel's sandbox would block.

_COMMON_PKGS = "git ca-certificates time"

# Node toolchain: ubuntu-base + Node 22 + git/time. Used by JS/TS projects.
genrule(
    name = "node_rootfs",
    srcs = [
        "@crun//file",
        "@ubuntu_base//file",
        "@node//file",
        "@cacert//file",
        "//harness:gen_config.py",
        "//harness:assemble_toolchain.sh",
    ],
    outs = ["node_rootfs.tgz"],
    cmd = "bash $(location //harness:assemble_toolchain.sh) " +
          "$(location @crun//file) $(location //harness:gen_config.py) " +
          "$(location @cacert//file) $(location @ubuntu_base//file) " +
          "$@ '" + _COMMON_PKGS + "' $(location @node//file) /opt/node 1",
    local = 1,
    tags = ["requires-network", "no-sandbox"],
)

# Go toolchain: ubuntu-base + Go (extracts to /opt/go) + git/time. The Go tarball
# has a top-level go/ dir, so it extracts to /opt with no strip -> /opt/go/bin.
genrule(
    name = "go_rootfs",
    srcs = [
        "@crun//file",
        "@ubuntu_base//file",
        "@go//file",
        "@cacert//file",
        "//harness:gen_config.py",
        "//harness:assemble_toolchain.sh",
    ],
    outs = ["go_rootfs.tgz"],
    cmd = "bash $(location //harness:assemble_toolchain.sh) " +
          "$(location @crun//file) $(location //harness:gen_config.py) " +
          "$(location @cacert//file) $(location @ubuntu_base//file) " +
          "$@ '" + _COMMON_PKGS + "' $(location @go//file) /opt 0",
    local = 1,
    tags = ["requires-network", "no-sandbox"],
)

# Shell toolchain: ubuntu-base + bats (test framework) + build-essential (small
# C shims). apt-only. Used by Shell projects (pyenv, ...).
genrule(
    name = "shell_rootfs",
    srcs = [
        "@crun//file",
        "@ubuntu_base//file",
        "@cacert//file",
        "//harness:gen_config.py",
        "//harness:assemble_toolchain.sh",
    ],
    outs = ["shell_rootfs.tgz"],
    cmd = "bash $(location //harness:assemble_toolchain.sh) " +
          "$(location @crun//file) $(location //harness:gen_config.py) " +
          "$(location @cacert//file) $(location @ubuntu_base//file) " +
          "$@ '" + _COMMON_PKGS + " bats build-essential'",
    local = 1,
    tags = ["requires-network", "no-sandbox"],
)

# C/C++ toolchain: ubuntu-base + the GNU autotools build stack. apt-only. Used by
# C projects (jq, ...). Individual projects apt-install any extra -dev libs they
# need on top (folded into their build command) -- but those are also baked here
# when common enough.
genrule(
    name = "c_rootfs",
    srcs = [
        "@crun//file",
        "@ubuntu_base//file",
        "@cacert//file",
        "//harness:gen_config.py",
        "//harness:assemble_toolchain.sh",
    ],
    outs = ["c_rootfs.tgz"],
    cmd = "bash $(location //harness:assemble_toolchain.sh) " +
          "$(location @crun//file) $(location //harness:gen_config.py) " +
          "$(location @cacert//file) $(location @ubuntu_base//file) " +
          "$@ '" + _COMMON_PKGS + " build-essential g++-14 cmake autoconf automake libtool pkg-config bison flex tzdata'",
    local = 1,
    tags = ["requires-network", "no-sandbox"],
)

# Rust toolchain: ubuntu-base + build-essential (cargo needs a C linker) + Rust
# (combined tarball extracted to /opt/rustdist, then install.sh -> /opt/rust/bin).
genrule(
    name = "rust_rootfs",
    srcs = [
        "@crun//file",
        "@ubuntu_base//file",
        "@rust//file",
        "@cacert//file",
        "//harness:gen_config.py",
        "//harness:assemble_toolchain.sh",
    ],
    outs = ["rust_rootfs.tgz"],
    cmd = "bash $(location //harness:assemble_toolchain.sh) " +
          "$(location @crun//file) $(location //harness:gen_config.py) " +
          "$(location @cacert//file) $(location @ubuntu_base//file) " +
          "$@ '" + _COMMON_PKGS + " build-essential' $(location @rust//file) /opt/rustdist 1 " +
          "'/opt/rustdist/install.sh --prefix=/opt/rust --components=rustc,cargo,rust-std-x86_64-unknown-linux-gnu,clippy-preview,rustfmt-preview --disable-ldconfig && rm -rf /opt/rustdist'",
    local = 1,
    tags = ["requires-network", "no-sandbox"],
)

# Python toolchain: ubuntu-base + python3/venv/pip + git/time. apt-only, no
# language tarball. Used by Python projects.
genrule(
    name = "python_rootfs",
    srcs = [
        "@crun//file",
        "@ubuntu_base//file",
        "@cacert//file",
        "//harness:gen_config.py",
        "//harness:assemble_toolchain.sh",
    ],
    outs = ["python_rootfs.tgz"],
    cmd = "bash $(location //harness:assemble_toolchain.sh) " +
          "$(location @crun//file) $(location //harness:gen_config.py) " +
          "$(location @cacert//file) $(location @ubuntu_base//file) " +
          "$@ '" + _COMMON_PKGS + " python3 python3-venv python3-pip'",
    local = 1,
    tags = ["requires-network", "no-sandbox"],
)
