load("//harness:defs.bzl", "repo_build", "repo_smoke")

# astro (rank_code_size 315): Web framework for content-driven websites.
# TypeScript monorepo managed with pnpm@11.5.0 + turbo 2.x. Astro 7.0.0-beta.5.
#
# build: Install pnpm@11.5.0 (matches packageManager field); pnpm install
#        --frozen-lockfile (reproducible from pnpm-lock.yaml); pnpm run build
#        invokes turbo over astro + @astrojs/* + create-astro packages
#        (TypeScript -> dist/, WASM compiler binary copied).
# test:  Deferred. test:integration needs Playwright (browser); test:e2e needs
#        Firefox/Chrome; no clean offline/headless unit subset.
# smoke: `astro --version` + build a minimal zero-import static page to exercise
#        the WebAssembly compiler (@astrojs/compiler-rs) and Vite pipeline.
repo_build(
    name = "astro",
    repo = "https://github.com/withastro/astro",
    commit = "7e7ab8775f1c70e00e30db9d3c4796246eaf1c5f",
    build = "npm install -g pnpm@11.5.0 && pnpm install --frozen-lockfile && pnpm run build",
    toolchain = "//toolchains:node_rootfs",
)

repo_smoke(
    name = "astro",
    built = ":astro",
    toolchain = "//toolchains:node_rootfs",
)
