load("//harness:defs.bzl", "repo_build", "repo_smoke", "repo_test")

# freqtrade (rank_code_size 364): Free, open source crypto trading bot.
#
# build: venv install from pinned requirements.txt (includes ta-lib==0.6.8 which
#        ships manylinux wheels bundling the C library — no system libta-lib needed);
#        install ft_client/ from repo for version-matched freqtrade-client; then
#        install the package + test deps.
# test:  offline subset: exclude exchange_online (live exchange calls) and freqai
#        (needs torch/GPU ML deps); all remaining tests use mock exchanges and
#        SQLite, so they run fully offline.
# smoke: freqtrade --version + --help (exercises the full import graph + CLI).
PY = "//toolchains:python_rootfs"

repo_build(
    name = "freqtrade",
    repo = "https://github.com/freqtrade/freqtrade",
    commit = "a29762684b84d100d92bf59c05c6272b439fd5a0",
    build = "python3 -m venv .venv && .venv/bin/pip install --quiet -r requirements.txt && .venv/bin/pip install --quiet ft_client/ && .venv/bin/pip install --quiet . \"pytest==9.0.3\" \"pytest-asyncio==1.4.0\" \"pytest-mock==3.15.1\" \"pytest-xdist==3.8.0\" \"time-machine==3.2.0\" \"pytest-timeout==2.4.0\"",
    toolchain = PY,
)

repo_test(
    name = "freqtrade",
    built = ":freqtrade",
    test = ". .venv/bin/activate && pytest tests --ignore=tests/exchange_online --ignore=tests/freqai --ignore=tests/optimize --ignore=tests/test_plotting.py --ignore=tests/test_pip_audit.py -k \"not hyperopt and not freqai and not Filehandler_without_permission\" -p no:randomly -q",
    toolchain = PY,
)

repo_smoke(
    name = "freqtrade",
    built = ":freqtrade",
    toolchain = PY,
)
